--- a/index.html
+++ b/index.html
@@ -189,17 +189,17 @@
 					<ul id="comment_list">
 						
 					</ul>
-					<div class="ui reply form">
+					<form class="ui reply form">
 						<div class="field">
 							<input type="text" name="author" placeholder="Name" />
 						</div>
 						<div class="field">
 							<textarea id="message"></textarea>
 						</div>
-						<button class="mini ui button teal labeled icon" id="add_comment">
+						<button class="mini ui button submit teal labeled icon" id="add_comment">
 							<i class="icon edit"></i> Add Comment
 						</button>
-					</div>
+					</form>
 				</section>
 				<section class="ui divider"></section>
 			</section>
